comprehensive security improvements, API validations, and QA testing
Security & Architecture:
- Implement SecureRandom for IbanGenerator and CardNumberGenerator
- Add @Transactional(rollbackFor = Exception.class) to critical operations
- Centralize RestTemplate configuration as a @Bean
- Configure CORS mapping for localhost:3000 and localhost:5173
- Disable spring.jpa.open-in-view for better database performance
- Migrate Collectors.toList() to Java 16+ .toList()

Validation & Exceptions:
- Localize GlobalExceptionHandler error messages to Azerbaijani
- Enhance DTO validations (phone pattern regex, card size, and amounts)
- Fix Gemini API request format (query parameter key resolution)

Testing & Cleanup:
- Execute end-to-end tests on 11 critical endpoints (Auth, Account, Card, Transaction)
- Verify 'Insufficient funds' logic to strictly prevent negative balances
- Validate card number masking and auto-PIN generation security constraints
- Remove accidentally generated 'frontend' folder to maintain pure backend structure
- Achieve 100% success rate with 76/76 passing tests